# git-ai-cli

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  RUST_IMPLEMENTATION_PROGRESS.md  RUST_REWRITE_SUMMARY.md  install.cjs  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  rust-release.yml
docs/: copilot-integration-plan.md
npm/: install.js  package.json
npm-platform/darwin-arm64/: package.json
npm-platform/darwin-x64/: package.json
npm-platform/linux-arm64/: package.json
npm-platform/linux-x64/: package.json
npm-platform/win32-x64/: .npmignore  dongowu-git-ai-cli-win32-x64-2.0.0.tgz  package.json
scripts/: publish-local.bat  publish-local.sh
src/: cli.ts  cli_main.ts  types.ts
src-rs/: error.rs  main.rs  types.rs
src-rs/commands/: commit.rs  config.rs  hook.rs  mod.rs  msg.rs  report.rs
src-rs/utils/: agent.rs  agent_lite.rs  agent_skills.rs  ai.rs  config.rs  copilot.rs  git.rs  mod.rs
src/commands/: branch.ts  commit.ts  config.ts  config_manage.ts  hook.ts  msg.ts  pr.ts  release.ts  report.ts
src/utils/: agent.ts  agent_lite.ts  ai.ts  config.ts  git.ts  update.ts
